# wineggx

./: CMakeLists.txt  README.md  README.txt  wineggx.sln
example1/: example1.cpp  example1.vcxproj  example1.vcxproj.filters
example2/: example2.vcxproj  example2.vcxproj.filters
example9/: example9.cpp  example9.vcxproj  example9.vcxproj.filters
include/: t-pro1.h  wineggx.h
lib/: README.txt
src/: ceggx.cpp  ceggx.h  cselectwindow.cpp  cselectwindow.h  eggx-mousetest.cpp  eggx-mousetest2.cpp  eggx-mousetest3.cpp  example2.cpp  ggetch-test.cpp  lines-test.cpp  mouse-test.cpp  mouse-test2.cpp  mouse-test3.cpp  mouse-test4.cpp  string-test.cpp  texample1.cpp  texample2.cpp  tmouse-test.cpp  wineggx.cpp
texample1/: texample1.vcxproj  texample1.vcxproj.filters
texample2/: texample2.vcxproj  texample2.vcxproj.filters
wineggx/: rgbtable.h  wineggx.cpp  wineggx.vcxproj  wineggx.vcxproj.filters
